RESOLVED FIXED43823
[chromium/mac]: Fix colors in compositing mode
https://bugs.webkit.org/show_bug.cgi?id=43823
Summary [chromium/mac]: Fix colors in compositing mode
Nico Weber
Reported 2010-08-10 18:24:14 PDT
[chromium/mac]: Fix colors in compositing mode
Attachments
Patch (2.99 KB, patch)
2010-08-10 18:24 PDT, Nico Weber
no flags
Patch (4.12 KB, patch)
2010-08-10 18:28 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2010-08-10 18:24:41 PDT
Nico Weber
Comment 2 2010-08-10 18:28:41 PDT
Nico Weber
Comment 3 2010-08-10 18:30:45 PDT
With this, the compositor draws exactly as the software path on my machine.
James Robinson
Comment 4 2010-08-10 18:32:23 PDT
That looks completely reasonable. Dimitri, wanna give this a loving touch?
Kenneth Russell
Comment 5 2010-08-10 18:34:28 PDT
Comment on attachment 64064 [details] Patch Looks good to me. Thanks for tracking this down!
WebKit Commit Bot
Comment 6 2010-08-10 20:26:20 PDT
Comment on attachment 64064 [details] Patch Rejecting patch 64064 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 64064, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: cgi?id=64064&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=43823&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 64064 from bug 43823. NOBODY (OOPS!) found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
James Robinson
Comment 7 2010-08-10 20:27:48 PDT
Yeah Nico - if you set commit-queue+ before r+ is set the commit queue will try to land it, see no reviewer, and then throw a hissy fit. Wait for the r+ before setting cq+ again.
Nico Weber
Comment 8 2010-08-10 20:37:05 PDT
Will do. Sorry.
WebKit Commit Bot
Comment 9 2010-08-11 16:15:09 PDT
Comment on attachment 64064 [details] Patch Clearing flags on attachment: 64064 Committed r65194: <http://trac.webkit.org/changeset/65194>
WebKit Commit Bot
Comment 10 2010-08-11 16:15:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.