2010-08-11  Nico Weber  <thakis@chromium.org>

Reviewed by David Levin.

        [chromium/mac]: Fix colors in compositing mode
        https://bugs.webkit.org/show_bug.cgi?id=43823

        The textures are drawn by opengl, which doesn't do any color space
        correction -- it assumes everything is in the device color space
        already. Hence, when drawing into the memory that will be uploaded
        as opengl texture, use the device color space.

        * platform/graphics/chromium/ImageLayerChromium.cpp:
        (WebCore::ImageLayerChromium::updateTextureContents):
        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::updateTextureContents):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::setRootLayerCanvasSize):

Canonical link: https://commits.webkit.org/55994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65194 268f45cc-cd09-0410-ab3c-d52691b4dbfc